# 2D_Optics

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja  conicgraphicsitem.cpp  conicgraphicsitem.h  conicsurface.cpp  conicsurface.h  detector.cpp  detector.h  histogramwidget.cpp  histogramwidget.h  lens.cpp  lens.h  lensgraphicsitem.cpp  lensgraphicsitem.h  mainwindow.cpp  mainwindow.h  meniscus.cpp  meniscus.h  ray.cpp  ray.h  spotdiagramwidget.cpp  spotdiagramwidget.h
.cmake/api/v1/reply/: codemodel-v2-2dcc7578eb44f14d6749.json  codemodel-v2-65b1355bae1f39df2964.json  index-2026-04-30T03-51-17-0561.json  index-2026-04-30T11-43-40-0666.json  target-2D_Optics-Debug-5413b01d914cf14570f8.json  target-2D_Optics-Debug-b6bad2be049a7a6b7e16.json
.cmake/api/v1/reply.prev/: codemodel-v2-7e76dbc643361c9b9cf1.json  codemodel-v2-ca63f698d92b5b20a1a6.json  index-2026-04-30T03-45-27-0059.json  index-2026-04-30T11-39-52-0765.json  target-2D_Optics-Debug-6e46a1d17d651847f0bd.json  target-2D_Optics-Debug-8ed5da4d425490707186.json
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QDialog.97A0D9087BE588A2.idx  QMouseEvent.076FB8EDF76BB881.idx  QSplitter.4D739CB2F3DE996E.idx  QWidget.23AFCAF4D31851CA.idx  conicgraphicsitem.cpp.9D4D9D2E2650DC6F.idx  conicgraphicsitem.h.891DFBEBC1B7922B.idx  conicsurface.cpp.5B4F0B1E492B05B8.idx  conicsurface.h.B3A05519D94E143A.idx  detector.cpp.5206B3260D939F8C.idx  detector.h.707CDA6FAEA23A5E.idx  histogramwidget.cpp.23076AD868B91A71.idx  histogramwidget.h.D43DE87BCAF3B234.idx  mainwindow.cpp.24C0F9973C36CD48.idx  mainwindow.h.3A512F392B869F87.idx  qdialog.h.313FA024BF86365B.idx  qsplitter.h.E7A88DB19C971E37.idx  ray.cpp.50A0FDA6B7BD3EA8.idx  ray.h.8C448F217D97E938.idx  spotdiagramwidget.cpp.D60A8FA19D052B71.idx  spotdiagramwidget.h.ECA28713062FC5A0.idx
2D_Optics_autogen/: deps  mocs_compilation.cpp
2D_Optics_autogen/EWIEGA46WW/: moc_histogramwidget.cpp  moc_histogramwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_spotdiagramwidget.cpp  moc_spotdiagramwidget.cpp.d
